funxParser.py
# Generated from funx.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class funxParser ( Parser ):

    grammarFileName = "funx.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'('", "')'", "'^'", 
                     "'%'", "'/'", "'*'", "'+'", "'-'", "'if'", "'else'", 
                     "'not'", "'or'", "'and'", "'='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'True'", "'False'", "'while'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUM", "VARIABLE", 
                      "FUNCIO", "STRING", "COMENTARI", "WS" ]

    RULE_root = 0
    RULE_bloc = 1
    RULE_instru = 2
    RULE_funcio = 3
    RULE_execfunc = 4
    RULE_expr = 5
    RULE_cond = 6
    RULE_ifcond = 7
    RULE_elsecond = 8
    RULE_bool = 9
    RULE_bucle = 10
    RULE_assignacio = 11

    ruleNames =  [ "root", "bloc", "instru", "funcio", "execfunc", "expr", 
                   "cond", "ifcond", "elsecond", "bool", "bucle", "assignacio" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    NUM=27
    VARIABLE=28
    FUNCIO=29
    STRING=30
    COMENTARI=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloc(self):
            return self.getTypedRuleContext(funxParser.BlocContext,0)


        def EOF(self):
            return self.getToken(funxParser.EOF, 0)

        def getRuleIndex(self):
            return funxParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = funxParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.bloc()
            self.state = 25
            self.match(funxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instru(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.InstruContext)
            else:
                return self.getTypedRuleContext(funxParser.InstruContext,i)


        def funcio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.FuncioContext)
            else:
                return self.getTypedRuleContext(funxParser.FuncioContext,i)


        def getRuleIndex(self):
            return funxParser.RULE_bloc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloc" ):
                return visitor.visitBloc(self)
            else:
                return visitor.visitChildren(self)




    def bloc(self):

        localctx = funxParser.BlocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 973084688) != 0:
                self.state = 29
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 27
                    self.instru()
                    pass

                elif la_ == 2:
                    self.state = 28
                    self.funcio()
                    pass


                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def execfunc(self):
            return self.getTypedRuleContext(funxParser.ExecfuncContext,0)


        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def cond(self):
            return self.getTypedRuleContext(funxParser.CondContext,0)


        def bucle(self):
            return self.getTypedRuleContext(funxParser.BucleContext,0)


        def assignacio(self):
            return self.getTypedRuleContext(funxParser.AssignacioContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_instru

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstru" ):
                return visitor.visitInstru(self)
            else:
                return visitor.visitChildren(self)




    def instru(self):

        localctx = funxParser.InstruContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instru)
        try:
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.execfunc()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 36
                self.cond()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.bucle()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 38
                self.assignacio()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCIO(self):
            return self.getToken(funxParser.FUNCIO, 0)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(funxParser.VARIABLE)
            else:
                return self.getToken(funxParser.VARIABLE, i)

        def instru(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.InstruContext)
            else:
                return self.getTypedRuleContext(funxParser.InstruContext,i)


        def getRuleIndex(self):
            return funxParser.RULE_funcio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncio" ):
                return visitor.visitFuncio(self)
            else:
                return visitor.visitChildren(self)




    def funcio(self):

        localctx = funxParser.FuncioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(funxParser.FUNCIO)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 42
                self.match(funxParser.VARIABLE)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(funxParser.T__0)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self.instru()
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 973084688) != 0):
                    break

            self.state = 54
            self.match(funxParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExecfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCIO(self):
            return self.getToken(funxParser.FUNCIO, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ExprContext)
            else:
                return self.getTypedRuleContext(funxParser.ExprContext,i)


        def getRuleIndex(self):
            return funxParser.RULE_execfunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExecfunc" ):
                return visitor.visitExecfunc(self)
            else:
                return visitor.visitChildren(self)




    def execfunc(self):

        localctx = funxParser.ExecfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_execfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(funxParser.FUNCIO)
            self.state = 60
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 57
                    self.expr(0) 
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 63
                self.match(funxParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return funxParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprParentesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParentesis" ):
                return visitor.visitExprParentesis(self)
            else:
                return visitor.visitChildren(self)


    class NumeroContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(funxParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumero" ):
                return visitor.visitNumero(self)
            else:
                return visitor.visitChildren(self)


    class NegatiuContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegatiu" ):
                return visitor.visitNegatiu(self)
            else:
                return visitor.visitChildren(self)


    class ExprfuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def execfunc(self):
            return self.getTypedRuleContext(funxParser.ExecfuncContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprfunc" ):
                return visitor.visitExprfunc(self)
            else:
                return visitor.visitChildren(self)


    class PotenciaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ExprContext)
            else:
                return self.getTypedRuleContext(funxParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPotencia" ):
                return visitor.visitPotencia(self)
            else:
                return visitor.visitChildren(self)


    class ExprVariableContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(funxParser.VARIABLE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprVariable" ):
                return visitor.visitExprVariable(self)
            else:
                return visitor.visitChildren(self)


    class SumaRestaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ExprContext)
            else:
                return self.getTypedRuleContext(funxParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumaResta" ):
                return visitor.visitSumaResta(self)
            else:
                return visitor.visitChildren(self)


    class ModDivMultContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ExprContext)
            else:
                return self.getTypedRuleContext(funxParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModDivMult" ):
                return visitor.visitModDivMult(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = funxParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                localctx = funxParser.ExprParentesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 67
                self.match(funxParser.T__3)
                self.state = 68
                self.expr(0)
                self.state = 69
                self.match(funxParser.T__4)
                pass
            elif token in [28]:
                localctx = funxParser.ExprVariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(funxParser.VARIABLE)
                pass
            elif token in [27]:
                localctx = funxParser.NumeroContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(funxParser.NUM)
                pass
            elif token in [11]:
                localctx = funxParser.NegatiuContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.match(funxParser.T__10)
                self.state = 74
                self.expr(2)
                pass
            elif token in [29]:
                localctx = funxParser.ExprfuncContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.execfunc()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 87
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = funxParser.PotenciaContext(self, funxParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 79
                        self.match(funxParser.T__5)
                        self.state = 80
                        self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = funxParser.ModDivMultContext(self, funxParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 81
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 82
                        _la = self._input.LA(1)
                        if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 83
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = funxParser.SumaRestaContext(self, funxParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 85
                        _la = self._input.LA(1)
                        if not(_la==10 or _la==11):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 86
                        self.expr(6)
                        pass

             
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifcond(self):
            return self.getTypedRuleContext(funxParser.IfcondContext,0)


        def elsecond(self):
            return self.getTypedRuleContext(funxParser.ElsecondContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_cond

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)




    def cond(self):

        localctx = funxParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.ifcond()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 93
                self.elsecond()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfcondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool_(self):
            return self.getTypedRuleContext(funxParser.BoolContext,0)


        def instru(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.InstruContext)
            else:
                return self.getTypedRuleContext(funxParser.InstruContext,i)


        def getRuleIndex(self):
            return funxParser.RULE_ifcond

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfcond" ):
                return visitor.visitIfcond(self)
            else:
                return visitor.visitChildren(self)




    def ifcond(self):

        localctx = funxParser.IfcondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifcond)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(funxParser.T__11)
            self.state = 97
            self.bool_(0)
            self.state = 98
            self.match(funxParser.T__0)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 973084688) != 0:
                self.state = 99
                self.instru()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(funxParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsecondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instru(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.InstruContext)
            else:
                return self.getTypedRuleContext(funxParser.InstruContext,i)


        def getRuleIndex(self):
            return funxParser.RULE_elsecond

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElsecond" ):
                return visitor.visitElsecond(self)
            else:
                return visitor.visitChildren(self)




    def elsecond(self):

        localctx = funxParser.ElsecondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elsecond)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(funxParser.T__12)
            self.state = 108
            self.match(funxParser.T__0)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 973084688) != 0:
                self.state = 109
                self.instru()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(funxParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return funxParser.RULE_bool

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NegacioContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bool_(self):
            return self.getTypedRuleContext(funxParser.BoolContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegacio" ):
                return visitor.visitNegacio(self)
            else:
                return visitor.visitChildren(self)


    class ComparacioContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ExprContext)
            else:
                return self.getTypedRuleContext(funxParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparacio" ):
                return visitor.visitComparacio(self)
            else:
                return visitor.visitChildren(self)


    class UnioContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bool_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.BoolContext)
            else:
                return self.getTypedRuleContext(funxParser.BoolContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnio" ):
                return visitor.visitUnio(self)
            else:
                return visitor.visitChildren(self)


    class BoolParentesisContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bool_(self):
            return self.getTypedRuleContext(funxParser.BoolContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolParentesis" ):
                return visitor.visitBoolParentesis(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)


    class BoolVariableContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(funxParser.VARIABLE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolVariable" ):
                return visitor.visitBoolVariable(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class BooleanContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)


    class DisjuncioContext(BoolContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a funxParser.BoolContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bool_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.BoolContext)
            else:
                return self.getTypedRuleContext(funxParser.BoolContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisjuncio" ):
                return visitor.visitDisjuncio(self)
            else:
                return visitor.visitChildren(self)



    def bool_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = funxParser.BoolContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_bool, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = funxParser.BoolParentesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 118
                self.match(funxParser.T__3)
                self.state = 119
                self.bool_(0)
                self.state = 120
                self.match(funxParser.T__4)
                pass

            elif la_ == 2:
                localctx = funxParser.NegacioContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 122
                self.match(funxParser.T__13)
                self.state = 123
                self.bool_(8)
                pass

            elif la_ == 3:
                localctx = funxParser.ComparacioContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 124
                self.expr(0)
                self.state = 125
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 126
                self.expr(0)
                pass

            elif la_ == 4:
                localctx = funxParser.BooleanContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 128
                self.expr(0)
                pass

            elif la_ == 5:
                localctx = funxParser.TrueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 129
                self.match(funxParser.T__22)
                pass

            elif la_ == 6:
                localctx = funxParser.FalseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 130
                self.match(funxParser.T__23)
                pass

            elif la_ == 7:
                localctx = funxParser.BoolVariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 131
                self.match(funxParser.VARIABLE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 142
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 140
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = funxParser.DisjuncioContext(self, funxParser.BoolContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bool)
                        self.state = 134
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 135
                        self.match(funxParser.T__14)
                        self.state = 136
                        self.bool_(8)
                        pass
